// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`code 1`] = `
"<h2>Code</h2>
<p>Normal code</p>
<pre><code class=\\"language-python\\">print('bla')
</code></pre>
<p>With Legend</p>
<figure><pre><code class=\\"language-python\\">print('bla')
</code></pre><figcaption>figcapt1</figcaption></figure>
<figure><pre><code class=\\"language-python\\">print('bla')
</code></pre><figcaption>figcapt1</figcaption></figure>
<p>break</p>
<figure><pre><code class=\\"language-python\\">print('bla')
</code></pre><figcaption>figcapt1 <em>em</em> <strong>strong <code>code</code></strong> end</figcaption></figure>
<p>bla</p>
<figure><pre><code class=\\"language-python\\">print('bla2')
</code></pre><figcaption>figcapt1</figcaption></figure>
<p>Code: bis</p>"
`;

exports[`custom-table 1`] = `
"<h2>Table</h2>
<p>Normal table</p>
<table>
<thead>
<tr>
<th>head1</th>
<th>head2</th>
</tr>
</thead>
<tbody>
<tr>
<td>bla</td>
<td>bla</td>
</tr>
</tbody>
</table>
<p>With Legend</p>
<figure><table>
<thead>
<tr>
<th>head1</th>
<th>head2</th>
</tr>
</thead>
<tbody>
<tr>
<td>bla</td>
<td>bla</td>
</tr>
</tbody>
</table><figcaption>figcapt1</figcaption></figure>
<figure><table>
<thead>
<tr>
<th>head1</th>
<th>head2</th>
</tr>
</thead>
<tbody>
<tr>
<td>bla</td>
<td>bla</td>
</tr>
</tbody>
</table><figcaption>figcapt1</figcaption></figure>
<p>CustomTable: bis</p>"
`;

exports[`quotation 1`] = `
"<p>(for convenience, · are replaced with
simple single spaces in the tests)</p>
<h2>Blockquote</h2>
<p>Empty blockquote</p>
<blockquote>
</blockquote>
<p>Normal blockquote</p>
<blockquote>
<p>My citation</p>
</blockquote>
<p>With Legend</p>
<figure><blockquote>
<p>My citation</p>
</blockquote><figcaption>figcapt1</figcaption></figure>
<p>With Legend without Source:</p>
<blockquote>
<p>My citation
: figcapt2</p>
</blockquote>
<p>haha</p>
<figure><blockquote>
<figure><blockquote>
<figure><blockquote>
<p>Foo··
Foo</p>
</blockquote><figcaption>fc1</figcaption></figure>
<p>Bar··
Bar··</p>
</blockquote><figcaption>fc2</figcaption></figure>
<p>Baz
Baz</p>
</blockquote><figcaption>fc3</figcaption></figure>"
`;

exports[`table 1`] = `
"<h2>Table</h2>
<p>Normal table</p>
<table>
<thead>
<tr>
<th>head1</th>
<th>head2</th>
</tr>
</thead>
<tbody>
<tr>
<td>bla</td>
<td>bla</td>
</tr>
</tbody>
</table>
<p>With Legend</p>
<figure><table>
<thead>
<tr>
<th>head1</th>
<th>head2</th>
</tr>
</thead>
<tbody>
<tr>
<td>bla</td>
<td>bla</td>
</tr>
</tbody>
</table><figcaption>figcapt1</figcaption></figure>
<figure><table>
<thead>
<tr>
<th>head1</th>
<th>head2</th>
</tr>
</thead>
<tbody>
<tr>
<td>bla</td>
<td>bla</td>
</tr>
</tbody>
</table><figcaption>figcapt1</figcaption></figure>
<p>Table: bis</p>"
`;
